--- a/WS3/Exercise/package.json
+++ b/WS3/Exercise/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "notepad.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node movies.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.12.2",
-    "express": "^5.1.0"
+    "axios": "^1.6.0",
+    "express": "^4.18.0"
   }
 }
