--- a/WS3/example/package.json
+++ b/WS3/example/package.json
@@ -5,7 +5,7 @@
     "express": "^5.1.0"
   },
   "scripts": {
-    "start": "node WS3/example/ws3-api/server.js"
+    "start": "node /ws3-api/server.js"
   },
   "name": "example",
   "version": "1.0.0",
